--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
   <title>Inicio</title>
 </head>
+
 <body>
   <header class="header_index">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
+          aria-controls="navbarOffcanvasLg" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg"
+          aria-labelledby="navbarOffcanvasLgLabel">
           <div class="offcanvas-header">
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle dropdown-item" href="./pages/portfolio.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
+                <a class="nav-link dropdown-toggle dropdown-item" href="./pages/portfolio.html" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="./pages/paginas_portfolio/bodas.html">Bodas</a></li>
                   <li><a class="dropdown-item" href="./pages/paginas_portfolio/bodas.html">Estudio Fotográfico</a></li>
@@ -77,7 +81,9 @@
       </div>
     </div>
     <div class="index2">
-      <a href="./pages/portfolio.html"><h3>Portfolio</h3></a>
+      <a href="./pages/portfolio.html">
+        <h3>Portfolio</h3>
+      </a>
       <div class="cards">
         <a href="./pages/paginas_portfolio/bodas.html">
           <div class="card text-bg-dark">
@@ -132,14 +138,17 @@
     <div class="footer_contacto">
       <a href="tel:+5491165661907">
         <img src="./images/iconos/icono_telefono.png" alt="Teléfono">
-          +54 9 11 6566-1907
+        +54 9 11 6566-1907
       </a>
       <a href="mailto:contacto.va@gmail.com">
         <img src="./images/iconos/icono_mail.png" alt="Mail">
-          contacto.va@gmail.com
+        contacto.va@gmail.com
       </a>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
