--- a/index.html
+++ b/index.html
@@ -57,18 +57,10 @@
       </div>
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./images/carousel/carrusel1.JPG" class="d-block w-100" alt="Bodas">
-          </div>
-          <div class="carousel-item">
-            <img src="./images/carousel/carrusel2.JPG" class="d-block w-100" alt="Estudio Fotográfico">
-          </div>
-          <div class="carousel-item">
-            <img src="./images/carousel/carrusel3.JPG" class="d-block w-100" alt="Exteriores">
-          </div>
-          <div class="carousel-item">
-            <img src="./images/carousel/carrusel4.JPG" class="d-block w-100" alt="Fiestas de 15">
-          </div>
+          <div class="carousel-item carousel-item1"></div>
+          <div class="carousel-item carousel-item2 active"></div>
+          <div class="carousel-item carousel-item3"></div>
+          <div class="carousel-item carousel-item4"></div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
