--- a/index.html
+++ b/index.html
@@ -110,6 +110,36 @@
           </div>
         </a>
       </div>
+      <div class="index2_portfolio">
+        <div>
+          <a href="./pages/paginas_portfolio/bodas.html">
+            <div class="index2_portfolio_contenido">
+              <h2>Bodas</h2>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="./pages/paginas_portfolio/bodas.html">
+            <div class="index2_portfolio_contenido">
+              <h2>Estudio Fotográfico</h2>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="./pages/paginas_portfolio/bodas.html">
+            <div class="index2_portfolio_contenido">
+              <h2>Fiestas de 15</h2>
+            </div>
+          </a>
+        </div>
+        <div>
+          <a href="./pages/paginas_portfolio/bodas.html">
+            <div class="index2_portfolio_contenido">
+              <h2>Exteriores</h2>
+            </div>
+          </a>
+        </div>
+      </div>
       <form action="#">
         <button>Pedí tu presupuesto</button>
       </form>
