--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="cards">
         <a href="./pages/paginas_portfolio/bodas.html">
           <div class="card text-bg-dark">
-            <img src="./images/portfolio/portfolio_bodas.JPG" class="card-img" alt="Bodas">
+            <img src="./images/portfolio/portfolio_bodas.jpg" class="card-img" alt="Bodas">
             <div class="card-img-overlay">
               <h5 class="card-title">Bodas</h5>
             </div>
@@ -87,7 +87,7 @@
         </a>
         <a href="./pages/paginas_portfolio/bodas.html">
           <div class="card text-bg-dark">
-            <img src="./images/portfolio/portfolio_estudio.JPG" class="card-img" alt="Estudio Fotográfico">
+            <img src="./images/portfolio/portfolio_estudio.jpg" class="card-img" alt="Estudio Fotográfico">
             <div class="card-img-overlay">
               <h5 class="card-title">Estudio Fotográfico</h5>
             </div>
@@ -95,7 +95,7 @@
         </a>
         <a href="./pages/paginas_portfolio/bodas.html">
           <div class="card text-bg-dark">
-            <img src="./images/portfolio/portfolio_fiestade15.JPG" class="card-img" alt="Fiestas de 15">
+            <img src="./images/portfolio/portfolio_fiestade15.jpg" class="card-img" alt="Fiestas de 15">
             <div class="card-img-overlay">
               <h5 class="card-title">Fiestas de 15</h5>
             </div>
@@ -103,7 +103,7 @@
         </a>
         <a href="./pages/paginas_portfolio/bodas.html">
           <div class="card text-bg-dark">
-            <img src="./images/portfolio/portfolio_exteriores.JPG" class="card-img" alt="Exteriores">
+            <img src="./images/portfolio/portfolio_exteriores.jpg" class="card-img" alt="Exteriores">
             <div class="card-img-overlay">
               <h5 class="card-title">Exteriores</h5>
             </div>
