--- a/pages/paginas_portfolio/bodas.html
+++ b/pages/paginas_portfolio/bodas.html
@@ -54,61 +54,61 @@
         </div>
         <div class="paginas_portfolio-grilla">
             <div class="paginas_portfolio-grilla1">
-                <img src="../../images/bodas/bodas1.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas1.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla2">
-                <img src="../../images/bodas/bodas2.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas2.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla3">
-                <img src="../../images/bodas/bodas3.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas3.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla4">
-                <img src="../../images/bodas/bodas4.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas4.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla5">
-                <img src="../../images/bodas/bodas5.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas5.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla6">
-                <img src="../../images/bodas/bodas6.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas6.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla7">
-                <img src="../../images/bodas/bodas7.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas7.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla8">
-                <img src="../../images/bodas/bodas8.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas8.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla9">
-                <img src="../../images/bodas/bodas9.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas9.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla10">
-                <img src="../../images/bodas/bodas10.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas10.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla11">
-                <img src="../../images/bodas/bodas11.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas11.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla12">
-                <img src="../../images/bodas/bodas12.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas12.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla13">
-                <img src="../../images/bodas/bodas13.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas13.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla14">
-                <img src="../../images/bodas/bodas14.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas14.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla15">
-                <img src="../../images/bodas/bodas15.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas15.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla16">
-                <img src="../../images/bodas/bodas16.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas16.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla17">
-                <img src="../../images/bodas/bodas17.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas17.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla18">
-                <img src="../../images/bodas/bodas18.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas18.jpg" alt="Bodas">
             </div>
             <div class="paginas_portfolio-grilla19">
-                <img src="../../images/bodas/bodas19.JPG" alt="Bodas">
+                <img src="../../images/bodas/bodas19.jpg" alt="Bodas">
             </div>
         </div>
     </main>
