--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -73,7 +73,8 @@
             </div>
             <div class="testimonios2_caja">
                 <div class="testimonios2_caja-img">
-                    <img src="../images/testimonios/testimonio_exteriores.JPG" alt="Testimonio Exteriores">
+                    <img class="testimonios2_caja-img-desktop" src="../images/testimonios/testimonio_exteriores.jpg" alt="Testimonio Exteriores">
+                    <img class="testimonios2_caja-img-mobile" src="../images/testimonios/testimonio_exteriores-mobile.jpg" alt="Testimonio Exteriores">
                 </div>
                 <div class="testimonios2_caja-texto">
                     <h3>Lucía</h3>
