--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="./images/iconos/favicon.ico" type="image/x-icon">
+  <meta name="description" content="Explora un mundo capturado a través de la lente. Descubre la magia de la fotografía en mi galería visual. Mis imágenes cuentan historias, expresan emociones y capturan momentos únicos. Bienvenido a mi mundo de imágenes, donde la belleza se encuentra en cada clic.">
+  <meta name="keywords" content="Fotografía, Fotos, Eventos, Bodas, Fiestas de 15, Exteriores, Estudio Fotográfico, Retratos, Profesional, Creatividad">
   <title>Inicio</title>
 </head>
 
