--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../images/iconos/favicon.ico" type="image/x-icon">
+    <meta name="description" content="¿Listo para conectarte? Encuéntrame aquí. Esta es tu vía directa para ponerse en contacto conmigo. Ya sea que tengas preguntas, comentarios o una oportunidad de colaboración, estoy a un clic de distancia. ¡Espero saber de ti pronto!">
+    <meta name="keywords" content="Fotografía, Fotos, Eventos, Bodas, Fiestas de 15, Exteriores, Estudio Fotográfico, Contacto, Información, Formulario">
     <title>Contacto</title>
 </head>
 <body>
