--- a/pages/paginas_portfolio/bodas.html
+++ b/pages/paginas_portfolio/bodas.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="shortcut icon" href="../../images/iconos/favicon.ico" type="image/x-icon">
+    <meta name="description" content="En el día más especial de tu vida, nos encargaremos de capturar cada momento mágico, cada sonrisa, cada mirada llena de amor. Nuestro objetivo es crear un recuerdo eterno de tu boda, lleno de emociones y detalles que te transportarán de vuelta a ese día tan especial.">
+    <meta name="keywords" content="Fotografía, Fotos, Eventos, Bodas, Profesional, Creatividad, Portfolio, Muestras">
     <title>Bodas</title>
 </head>
 <body>
