--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../images/iconos/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Aquí encontrarás una selección de mis mejores trabajos fotográficos. A través de mis lentes, busco capturar momentos únicos, emociones genuinas y la belleza que existe en cada rincón del mundo.">
+    <meta name="keywords" content="Fotografía, Fotos, Eventos, Bodas, Fiestas de 15, Exteriores, Estudio Fotográfico, Retratos, Profesional, Portfolio">
     <title>Portfolio</title>
 </head>
 <body>
