--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../images/iconos/favicon.ico" type="image/x-icon">
+    <meta name="description" content="En esta página, te invito a conocer más sobre mí, mi trayectoria y lo que me apasiona. Descubre cómo mi dedicación a la fotografía ha influido en mi viaje y cómo puedo compartir mis conocimientos contigo. ¡Bienvenido a mi mundo!">
+    <meta name="keywords" content="Fotografía, Fotos, Retratos, Profesional, Creatividad, Sobre Mí, Biografía, Presentación">
     <title>Sobre Mí</title>
 </head>
 <body>
