--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../images/iconos/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Aquí encontrarás las experiencias y opiniones reales de nuestros clientes satisfechos. Nos enorgullece compartir estos testimonios, ya que reflejan nuestro compromiso de ofrecer un servicio excepcional y de calidad.">
+    <meta name="keywords" content="Fotografía, Fotos, Profesional, Testimonios, Referencias, Clientes">
     <title>Testimonios</title>
 </head>
 <body>
