--- a/pages/paginas_portfolio/bodas.html
+++ b/pages/paginas_portfolio/bodas.html
@@ -30,7 +30,7 @@
                                 <a class="nav-link dropdown-toggle" href="../../pages/portfolio.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="../../pages/paginas_portfolio/bodas.html">Bodas</a></li>
-                                    <li><a class="dropdown-item" href="../../pages/paginas_portfolio/bodas.html">Estudio Fotográfico</a></li>
+                                    <li><a class="dropdown-item" href="../../pages/paginas_portfolio/estudio.html">Estudio Fotográfico</a></li>
                                     <li><a class="dropdown-item" href="../../pages/paginas_portfolio/bodas.html">Fiestas de 15</a></li>
                                     <li><a class="dropdown-item" href="../../pages/paginas_portfolio/bodas.html">Exteriores</a></li>
                                 </ul>
@@ -51,66 +51,66 @@
         </nav>
     </header>
     <main>
-        <div class="cabecera paginas_portfolio-bodas">
+        <div class="cabecera paginas_portfolio_bodas">
             <h1>Bodas</h1>
             <h2>En el día más especial de tu vida, nos encargaremos de capturar cada momento mágico, cada sonrisa, cada mirada llena de amor. Nuestro objetivo es crear un recuerdo eterno de tu boda, lleno de emociones y detalles que te transportarán de vuelta a ese día tan especial.</h2>
         </div>
-        <div class="paginas_portfolio-grilla">
-            <div class="paginas_portfolio-grilla1">
+        <div class="paginas_portfolio_bodas-grilla">
+            <div class="paginas_portfolio_bodas-grilla1">
                 <img src="../../images/bodas/bodas1.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla2">
+            <div class="paginas_portfolio_bodas-grilla2">
                 <img src="../../images/bodas/bodas2.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla3">
+            <div class="paginas_portfolio_bodas-grilla3">
                 <img src="../../images/bodas/bodas3.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla4">
+            <div class="paginas_portfolio_bodas-grilla4">
                 <img src="../../images/bodas/bodas4.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla5">
+            <div class="paginas_portfolio_bodas-grilla5">
                 <img src="../../images/bodas/bodas5.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla6">
+            <div class="paginas_portfolio_bodas-grilla6">
                 <img src="../../images/bodas/bodas6.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla7">
+            <div class="paginas_portfolio_bodas-grilla7">
                 <img src="../../images/bodas/bodas7.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla8">
+            <div class="paginas_portfolio_bodas-grilla8">
                 <img src="../../images/bodas/bodas8.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla9">
+            <div class="paginas_portfolio_bodas-grilla9">
                 <img src="../../images/bodas/bodas9.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla10">
+            <div class="paginas_portfolio_bodas-grilla10">
                 <img src="../../images/bodas/bodas10.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla11">
+            <div class="paginas_portfolio_bodas-grilla11">
                 <img src="../../images/bodas/bodas11.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla12">
+            <div class="paginas_portfolio_bodas-grilla12">
                 <img src="../../images/bodas/bodas12.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla13">
+            <div class="paginas_portfolio_bodas-grilla13">
                 <img src="../../images/bodas/bodas13.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla14">
+            <div class="paginas_portfolio_bodas-grilla14">
                 <img src="../../images/bodas/bodas14.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla15">
+            <div class="paginas_portfolio_bodas-grilla15">
                 <img src="../../images/bodas/bodas15.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla16">
+            <div class="paginas_portfolio_bodas-grilla16">
                 <img src="../../images/bodas/bodas16.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla17">
+            <div class="paginas_portfolio_bodas-grilla17">
                 <img src="../../images/bodas/bodas17.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla18">
+            <div class="paginas_portfolio_bodas-grilla18">
                 <img src="../../images/bodas/bodas18.jpg" alt="Bodas">
             </div>
-            <div class="paginas_portfolio-grilla19">
+            <div class="paginas_portfolio_bodas-grilla19">
                 <img src="../../images/bodas/bodas19.jpg" alt="Bodas">
             </div>
         </div>
