Fiestas de 15 Terminado

--- a/pages/paginas_portfolio/fiestasde15.html
+++ b/pages/paginas_portfolio/fiestasde15.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="shortcut icon" href="../../images/iconos/favicon.ico" type="image/x-icon">
-    <meta name="description" content="En el día más especial de tu vida, nos encargaremos de capturar cada momento mágico, cada sonrisa, cada mirada llena de amor. Nuestro objetivo es crear un recuerdo eterno de tu boda, lleno de emociones y detalles que te transportarán de vuelta a ese día tan especial.">
-    <meta name="keywords" content="Fotografía, Fotos, Eventos, Bodas, Profesional, Creatividad, Portfolio, Muestras">
-    <title>Bodas</title>
+    <meta name="description" content="No dejes que los momentos especiales de tu fiesta de 15 años se desvanezcan en el tiempo. Permítenos capturarlos en hermosas fotografías que te hagan revivir la magia de este día una y otra vez.">
+    <meta name="keywords" content="Fotografía, Fotos, Eventos, Fiestas de 15, Profesional, Creatividad, Portfolio, Muestras">
+    <title>Fiestas de 15</title>
 </head>
 <body>
     <header>
@@ -51,68 +51,60 @@
         </nav>
     </header>
     <main>
-        <div class="cabecera paginas_portfolio_bodas">
-            <h1>Bodas</h1>
-            <h2>En el día más especial de tu vida, nos encargaremos de capturar cada momento mágico, cada sonrisa, cada mirada llena de amor. Nuestro objetivo es crear un recuerdo eterno de tu boda, lleno de emociones y detalles que te transportarán de vuelta a ese día tan especial.</h2>
+        <div class="cabecera paginas_portfolio_fiestas">
+            <h1>Fiestas de 15</h1>
+            <h2>No dejes que los momentos especiales de tu fiesta de 15 años se desvanezcan en el tiempo. Permítenos capturarlos en hermosas fotografías que te hagan revivir la magia de este día una y otra vez.</h2>
         </div>
-        <div class="paginas_portfolio_bodas-grilla">
-            <div class="paginas_portfolio_bodas-grilla1">
-                <img src="../../images/bodas/bodas1.jpg" alt="Bodas">
+        <div class="paginas_portfolio_fiestas-grilla">
+            <div class="paginas_portfolio_fiestas-grilla1">
+                <img src="../../images/fiestade15/fiestade151.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla2">
-                <img src="../../images/bodas/bodas2.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla2">
+                <img src="../../images/fiestade15/fiestade152.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla3">
-                <img src="../../images/bodas/bodas3.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla3">
+                <img src="../../images/fiestade15/fiestade153.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla4">
-                <img src="../../images/bodas/bodas4.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla4">
+                <img src="../../images/fiestade15/fiestade154.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla5">
-                <img src="../../images/bodas/bodas5.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla5">
+                <img src="../../images/fiestade15/fiestade155.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla6">
-                <img src="../../images/bodas/bodas6.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla6">
+                <img src="../../images/fiestade15/fiestade156.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla7">
-                <img src="../../images/bodas/bodas7.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla7">
+                <img src="../../images/fiestade15/fiestade157.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla8">
-                <img src="../../images/bodas/bodas8.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla8">
+                <img src="../../images/fiestade15/fiestade158.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla9">
-                <img src="../../images/bodas/bodas9.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla9">
+                <img src="../../images/fiestade15/fiestade159.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla10">
-                <img src="../../images/bodas/bodas10.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla10">
+                <img src="../../images/fiestade15/fiestade1510.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla11">
-                <img src="../../images/bodas/bodas11.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla11">
+                <img src="../../images/fiestade15/fiestade1511.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla12">
-                <img src="../../images/bodas/bodas12.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla12">
+                <img src="../../images/fiestade15/fiestade1512.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla13">
-                <img src="../../images/bodas/bodas13.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla13">
+                <img src="../../images/fiestade15/fiestade1513.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla14">
-                <img src="../../images/bodas/bodas14.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla14">
+                <img src="../../images/fiestade15/fiestade1514.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla15">
-                <img src="../../images/bodas/bodas15.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla15">
+                <img src="../../images/fiestade15/fiestade1515.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla16">
-                <img src="../../images/bodas/bodas16.jpg" alt="Bodas">
+            <div class="paginas_portfolio_fiestas-grilla16">
+                <img src="../../images/fiestade15/fiestade1516.jpg" alt="Fiestas de 15">
             </div>
-            <div class="paginas_portfolio_bodas-grilla17">
-                <img src="../../images/bodas/bodas17.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla18">
-                <img src="../../images/bodas/bodas18.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla19">
-                <img src="../../images/bodas/bodas19.jpg" alt="Bodas">
-            </div>
+
         </div>
     </main>
     <footer>
