--- a/pages/paginas_portfolio/exteriores.html
+++ b/pages/paginas_portfolio/exteriores.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="shortcut icon" href="../../images/iconos/favicon.ico" type="image/x-icon">
-    <meta name="description" content="En el día más especial de tu vida, nos encargaremos de capturar cada momento mágico, cada sonrisa, cada mirada llena de amor. Nuestro objetivo es crear un recuerdo eterno de tu boda, lleno de emociones y detalles que te transportarán de vuelta a ese día tan especial.">
-    <meta name="keywords" content="Fotografía, Fotos, Eventos, Bodas, Profesional, Creatividad, Portfolio, Muestras">
-    <title>Bodas</title>
+    <meta name="description" content="Nos encanta aprovechar la belleza de la naturaleza, la luz natural y los paisajes únicos para crear imágenes auténticas y llenas de vida. Ya sea que desees una sesión personal, de pareja, familiar o de moda, trabajar en exteriores ofrece una amplia gama de posibilidades creativas.">
+    <meta name="keywords" content="Fotografía, Fotos, Exteriores, Profesional, Creatividad, Portfolio, Muestras">
+    <title>Exteriores</title>
 </head>
 <body>
     <header>
@@ -51,67 +51,46 @@
         </nav>
     </header>
     <main>
-        <div class="cabecera paginas_portfolio_bodas">
-            <h1>Bodas</h1>
-            <h2>En el día más especial de tu vida, nos encargaremos de capturar cada momento mágico, cada sonrisa, cada mirada llena de amor. Nuestro objetivo es crear un recuerdo eterno de tu boda, lleno de emociones y detalles que te transportarán de vuelta a ese día tan especial.</h2>
+        <div class="cabecera paginas_portfolio_exteriores">
+            <h1>Exteriores</h1>
+            <h2>Nos encanta aprovechar la belleza de la naturaleza, la luz natural y los paisajes únicos para crear imágenes auténticas y llenas de vida. Ya sea que desees una sesión personal, de pareja, familiar o de moda, trabajar en exteriores ofrece una amplia gama de posibilidades creativas.</h2>
         </div>
-        <div class="paginas_portfolio_bodas-grilla">
-            <div class="paginas_portfolio_bodas-grilla1">
-                <img src="../../images/bodas/bodas1.jpg" alt="Bodas">
+        <div class="paginas_portfolio_exteriores-grilla">
+            <div class="paginas_portfolio_exteriores-grilla1">
+                <img src="../../images/exteriores/exteriores2.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla2">
-                <img src="../../images/bodas/bodas2.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla2">
+                <img src="../../images/exteriores/exteriores3.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla3">
-                <img src="../../images/bodas/bodas3.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla3">
+                <img src="../../images/exteriores/exteriores4.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla4">
-                <img src="../../images/bodas/bodas4.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla4">
+                <img src="../../images/exteriores/exteriores5.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla5">
-                <img src="../../images/bodas/bodas5.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla5">
+                <img src="../../images/exteriores/exteriores6.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla6">
-                <img src="../../images/bodas/bodas6.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla6">
+                <img src="../../images/exteriores/exteriores7.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla7">
-                <img src="../../images/bodas/bodas7.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla7">
+                <img src="../../images/exteriores/exteriores8.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla8">
-                <img src="../../images/bodas/bodas8.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla8">
+                <img src="../../images/exteriores/exteriores9.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla9">
-                <img src="../../images/bodas/bodas9.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla9">
+                <img src="../../images/exteriores/exteriores10.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla10">
-                <img src="../../images/bodas/bodas10.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla10">
+                <img src="../../images/exteriores/exteriores11.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla11">
-                <img src="../../images/bodas/bodas11.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla11">
+                <img src="../../images/exteriores/exteriores12.jpg" alt="Exteriores">
             </div>
-            <div class="paginas_portfolio_bodas-grilla12">
-                <img src="../../images/bodas/bodas12.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla13">
-                <img src="../../images/bodas/bodas13.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla14">
-                <img src="../../images/bodas/bodas14.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla15">
-                <img src="../../images/bodas/bodas15.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla16">
-                <img src="../../images/bodas/bodas16.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla17">
-                <img src="../../images/bodas/bodas17.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla18">
-                <img src="../../images/bodas/bodas18.jpg" alt="Bodas">
-            </div>
-            <div class="paginas_portfolio_bodas-grilla19">
-                <img src="../../images/bodas/bodas19.jpg" alt="Bodas">
+            <div class="paginas_portfolio_exteriores-grilla12">
+                <img src="../../images/exteriores/exteriores13.jpg" alt="Exteriores">
             </div>
         </div>
     </main>
