Correcion de errores

--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -58,7 +58,7 @@
         </div>
         <div class="sobreMi_cuerpo">
             <div class="sobreMi_cuerpo_imagen">
-                <img src="../images/sobre_mi.JPG" alt="Valentina Ambrosino">
+                <img src="../images/sobre_mi.jpg" alt="Valentina Ambrosino">
             </div>
             <div class="sobreMi_cuerpo_descripcion">
                 <h3>Fotógrafa</h3>
