--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -58,7 +58,7 @@
         <div class="testimonios2">
             <div class="testimonios2_caja">
                 <div class="testimonios2_caja-img">
-                    <img src="../images/testimonios/testimonio_bodas.JPG" alt="Testimonio Boda">
+                    <img src="../images/testimonios/testimonio_bodas.jpg" alt="Testimonio Boda">
                 </div>
                 <div class="testimonios2_caja-texto">
                     <h3>Javier y Gabriela</h3>
@@ -67,7 +67,7 @@
             </div>
             <div class="testimonios2_caja">
                 <div class="testimonios2_caja-img">
-                    <img src="../images/testimonios/testimonio_estudio.JPG" alt="Testimonio Estudio Fotográfico">
+                    <img src="../images/testimonios/testimonio_estudio.jpg" alt="Testimonio Estudio Fotográfico">
                 </div>
                 <div class="testimonios2_caja-texto">
                     <h3>Renata</h3>
@@ -86,7 +86,7 @@
             </div>
             <div class="testimonios2_caja">
                 <div class="testimonios2_caja-img">
-                    <img src="../images/testimonios/testimonio_fiestade15.JPG" alt="Testimonio Fiesta de 15">
+                    <img src="../images/testimonios/testimonio_fiestade15.jpg" alt="Testimonio Fiesta de 15">
                 </div>
                 <div class="testimonios2_caja-texto">
                     <h3>Luciana</h3>
